# humanoid_brown

./: .gitmodules  README.md  gripper_joint_traj_test.py
docs/ATI_FT_CD/Calibration/: FT38188 Net.xml
docs/ATI_FT_CD/Documentation/: Thumbs.db
docs/ATI_FT_CD/LabVIEW Demo/: ATILabVIEW.llb  DigitalFT.llb
dorfl_moveit/: .setup_assistant  CMakeLists.txt  package.xml
dorfl_moveit/config/: PositionJointInterface_controllers.yaml  dorfl_control.yaml  fake_controllers.yaml  humanoid.srdf  iiwa_left_joint_names.yaml  iiwa_right_control.yaml  iiwa_right_joint_names.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml  simple_moveit_controllers.yaml  stomp_planning.yaml
dorfl_moveit/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  dorfl_control.launch  dorfl_hw.launch  dorfl_moveit.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit_planning_execution.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml  test_hw.launch
humanoid_bringup/: CMakeLists.txt  package.xml
humanoid_bringup/launch/: humanoid_bringup.launch  humanoid_structure_core.launch
humanoid_description/: CMakeLists.txt  package.xml
humanoid_description/launch/: humanoid_description.launch
humanoid_description/urdf/: humanoid.urdf.xacro
